fixed employee view food. aligned title & description. fixed delete button

--- a/src/css/CartCard.css
+++ b/src/css/CartCard.css
@@ -80,7 +80,7 @@
 
 .cart-delete-button:hover {
   background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 50%;
+  border-radius: 10%;
 }
 
 .cart-select {
